dnl Process this file with autoconf to produce a configure script.
AC_INIT(JIVE software correlator, 0.0.6)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(sfxc, 0.0.6)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_CXX
AC_PROG_F77
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_LANG_CPLUSPLUS

dnl Checking generic c libraries
AC_CHECK_LIB(m, sin)
AC_CHECK_LIB(pthread, sem_init)
dnl Needed for the optimized channel extractor
AC_CHECK_LIB(dl, dlopen)

dnl setting flags for sfxc
SFXC_CXXFLAGS='-I${top_srcdir}/include'
SFXC_LDADD=' '

AC_CHECK_FUNCS(sincos)

dnl backup of generic flags
CXXFLAGS_IN=$CXXFLAGS
CFLAGS_IN=$CFLAGS
LDFLAGS_IN=$LDFLAGS
LIBS_IN=$LIBS

dnl ---------------------------------------------------------------------------
dnl Checking external libraries
dnl ---------------------------------------------------------------------------

dnl resetting generic flags
CXXFLAGS=$CXXFLAGS_IN
CFLAGS=$CFLAGS_IN
LDFLAGS=$LDFLAGS_IN

dnl Check for fftw
AC_CHECK_LIB(fftw3, fftw_execute, [], [
        echo "Couldn't find fftw3 library."
        exit -1
        ])
AC_CHECK_LIB(fftw3f, fftwf_execute, [], [
        echo "Couldn't find fftw3 library."
        exit -1
        ])
FFTW_CXXFLAGS=
FFTW_LDADD=" -lfftw3 -lfftw3f"
AC_SUBST(FFTW_CXXFLAGS)
AC_SUBST(FFTW_LDADD)
SFXC_CXXFLAGS="$SFXC_CXXFLAGS $FFTW_CXXFLAGS"
SFXC_LDADD="$SFXC_LDADD $FFTW_LDADD"

dnl resetting generic flags
CXXFLAGS=$CXXFLAGS_IN
CFLAGS=$CFLAGS_IN
LDFLAGS=$LDFLAGS_IN

LIBS=$LIBS_IN



dnl ---------------------------------------------------------------------------
dnl setting shipped libraries
dnl ---------------------------------------------------------------------------

dnl setting Damien's libraries
DAMIEN_CXXFLAGS='-I${top_srcdir}/lib/common/src -I${top_srcdir}/lib/containers/src -I${top_srcdir}/lib/netlib/src -I${top_srcdir}/lib/testunit/src '
DAMIEN_LDADD='-L${top_srcdir}/lib/testunit -ltestunit -L${top_srcdir}/lib/netlib -lnetlib -L${top_srcdir}/lib/containers -lcontainers -L${top_srcdir}/lib/common -lcommon -ltestunit'
AC_SUBST(DAMIEN_CXXFLAGS)
AC_SUBST(DAMIEN_LDADD)

SFXC_CXXFLAGS="$SFXC_CXXFLAGS $DAMIEN_CXXFLAGS"
SFXC_LDADD="$SFXC_LDADD $DAMIEN_LDADD"


dnl setting json-cpp
JSONCPP_CXXFLAGS=' -I${top_srcdir}/lib/jsoncpp/include '
JSONCPP_LDADD=' -L${top_srcdir}/lib/jsoncpp -ljsoncpp '
AC_SUBST(JSONCPP_CXXFLAGS)
AC_SUBST(JSONCPP_LDADD)

SFXC_CXXFLAGS="$SFXC_CXXFLAGS $JSONCPP_CXXFLAGS"
SFXC_LDADD="$SFXC_LDADD $JSONCPP_LDADD"


dnl setting gsl
dnl first check gslcblas
AC_CHECK_LIB([gslcblas],[cblas_dgemm])
AC_CHECK_LIB([gsl],[gsl_blas_dgemm],
dnl found gsl, use the global version
GSL_CXXFLAGS=''
GSL_LDADD='-lgsl -lgslcblas'
HAS_GSL='yes'
,
dnl gsl not found, install a local copy
GSL_CXXFLAGS='-I${top_srcdir}/lib/gsl/install/include '
GSL_LDADD='-L${top_srcdir}/lib/gsl/install/lib -lgsl -lgslcblas'
HAS_GSL='no'
)

AC_SUBST(GSL_CXXFLAGS)
AC_SUBST(GSL_LDADD)
AC_SUBST(HAS_GSL)

SFXC_CXXFLAGS="$SFXC_CXXFLAGS $GSL_CXXFLAGS"
SFXC_LDADD="$SFXC_LDADD $GSL_LDADD"

dnl resetting generic flags
CXXFLAGS=$CXXFLAGS_IN
CFLAGS=$CFLAGS_IN
LDFLAGS=$LDFLAGS_IN
LIBS=$LIBS_IN

dnl setting vex_parser
VEX_PARSER_CXXFLAGS='-I${top_srcdir}/lib/vex_parser/install/include '
VEX_PARSER_LDADD='-L${top_srcdir}/lib/vex_parser/install/lib -lvex_parser '
AC_SUBST(VEX_PARSER_CXXFLAGS)
AC_SUBST(VEX_PARSER_LDADD)

SFXC_CXXFLAGS="$SFXC_CXXFLAGS $VEX_PARSER_CXXFLAGS"
SFXC_LDADD="$SFXC_LDADD $VEX_PARSER_LDADD"

BASE_CXXFLAGS='-I${top_srcdir}/include '
BASE_LDADD=' '

AC_SUBST(BASE_CXXFLAGS)
AC_SUBST(BASE_LDADD)

UTILS_CXXFLAGS="$BASE_CXXFLAGS $VEX_PARSER_CXXFLAGS $JSONCPP_CXXFLAGS $DAMIEN_CXXFLAGS $FFTW_CXXFLAGS"
UTILS_LDADD="$BASE_LDADD $VEX_PARSER_LDADD $JSONCPP_LDADD $DAMIEN_LDADD $FFTW_LDADD"

dnl exporting sfxc flags
AC_SUBST(SFXC_CXXFLAGS)
AC_SUBST(SFXC_LDADD)

AC_SUBST(UTILS_CXXFLAGS)
AC_SUBST(UTILS_LDADD)


dnl ---------------------------------------------------------------------------
dnl Checking for ./configure options
dnl ---------------------------------------------------------------------------
dnl debug
AC_ARG_ENABLE(debug,
              [  --enable-debug          Enable debugging information],
              USE_DEBUG="$enableval", USE_DEBUG="no")

if test $USE_DEBUG = "yes"; then
  CFLAGS="$CFLAGS -g -DSFXC_PRINT_DEBUG -rdynamic"
  CXXFLAGS="$CXXFLAGS -g -DSFXC_PRINT_DEBUG -rdynamic"
fi

AC_ARG_ENABLE(nompi,
              [  --disable-mpi          Compile without the dependency to MPI],
              USE_MPI="$nompi", USE_MPI="yes")

if test $USE_MPI = "yes"; then
  CFLAGS="$CFLAGS -DUSE_MPI"
  CXXFLAGS="$CXXFLAGS -DUSE_MPI"
fi



dnl progress
AC_ARG_ENABLE(progress,
              [  --enable-progress        Enable progress messages],
              PRINT_PROGRESS="$enableval", PRINT_PROGRESS="no")

if test $PRINT_PROGRESS = "yes"; then
  CFLAGS="$CFLAGS -DPRINT_PROGRESS -DSFXC_PRINT_DEBUG"
  CXXFLAGS="$CXXFLAGS -DPRINT_PROGRESS -DSFXC_PRINT_DEBUG"
fi


dnl export these variable (so Makefile substitutions
dnl can be made.
AC_SUBST(CFLAGS)
AC_SUBST(CXXFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(LDADD)

AC_OUTPUT(Makefile
          lib/Makefile
          lib/calc10/Makefile
          lib/calc10/include/Makefile
          lib/calc10/lib/Makefile
          lib/calc10/src/Makefile
          lib/common/Makefile
          lib/common/test/Makefile
          lib/containers/Makefile
          lib/containers/test/Makefile
          lib/netlib/Makefile
          lib/testunit/Makefile
          lib/jsoncpp/Makefile
          lib/gsl/Makefile
          lib/vex_parser/Makefile
          src/Makefile
          include/Makefile
          utils/Makefile
          utils/delay/Makefile
          doc/Makefile
          doc/html/Makefile
         )

