dnl Process this file with autoconf to produce a configure script.
AC_INIT(JIVE software correlator, 0.0.6)
AC_CONFIG_AUX_DIR(config)
AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(sfxc, 0.0.6)

dnl Checks for programs.
AC_PROG_CC
AM_PROG_CC_C_O
AC_PROG_CXX
AC_PROG_F77
AC_PROG_INSTALL
AC_PROG_RANLIB

AC_LANG_CPLUSPLUS

dnl Checking generic c libraries
AC_CHECK_LIB(m, sin)
AC_CHECK_LIB(pthread, sem_init)
dnl Needed for the optimized channel extractor
AC_CHECK_LIB(dl, dlopen)

dnl setting flags for sfxc
SFXC_CXXFLAGS='-I${top_srcdir}/include'
SFXC_LDADD=' '

AC_CHECK_FUNCS(sincos)

dnl backup of generic flags
CXXFLAGS_IN=$CXXFLAGS
CFLAGS_IN=$CFLAGS
LDFLAGS_IN=$LDFLAGS
LIBS_IN=$LIBS

dnl ---------------------------------------------------------------------------
dnl Checking for ./configure options
dnl ---------------------------------------------------------------------------
dnl debug
AC_ARG_ENABLE(debug,
              [  --enable-debug          Enable debugging information],
              USE_DEBUG="$enableval", USE_DEBUG="no")

AC_ARG_ENABLE(mpi,
              [  --enable-mpi          Compile with dependency to MPI [default=yes]],
              USE_MPI="$enableval", USE_MPI="yes")

AC_ARG_ENABLE(progress,
              [  --enable-progress        Enable progress messages],
              PRINT_PROGRESS="$enableval", PRINT_PROGRESS="no")

AC_ARG_ENABLE(fftw3,
              [  --enable-fftw3          Compile with dependency to FFTW3 [default=yes]],
              USE_FFTW3="$enableval", USE_FFTW3="yes")

AC_ARG_ENABLE(gsl,
              [  --enable-gsl          Compile with dependency to GSL [default=yes]],
              USE_GSL="$enableval", USE_GSL="yes")

AC_ARG_ENABLE(gendelay,
              [  --enable-gendelay     Compile with the generate_delay_model (require Fortan) [default=yes]],
              WITH_GENDELAY="$enableval", WITH_GENDELAY="yes")

AC_ARG_ENABLE(calc10,
              [  --enable-calc10     Compile with the cacl10 (require Fortan) [default=yes]],
              WITH_CALC="$enableval", WITH_CALC="yes")

dnl ---------------------------------------------------------------------------
dnl Checking external libraries and dependency
dnl ---------------------------------------------------------------------------
if test $USE_DEBUG = "yes"; then
  SFXC_CFLAGS="$SFXC_CFLAGS -g -DSFXC_PRINT_DEBUG -rdynamic"
  SFXC_CXXFLAGS="$SFXC_CXXFLAGS -g -DSFXC_PRINT_DEBUG -rdynamic"
fi

if test $PRINT_PROGRESS = "yes"; then
  SFXC_CFLAGS="$SFXC_CFLAGS -DPRINT_PROGRESS -DSFXC_PRINT_DEBUG"
  SFXC_CXXFLAGS="$SFXC_CXXFLAGS -DPRINT_PROGRESS -DSFXC_PRINT_DEBUG"
fi

if test $USE_MPI = "yes"; then
  SFXC_CFLAGS="$SFXC_CFLAGS -DUSE_MPI"
  SFXC_CXXFLAGS="$SFXC_CXXFLAGS -DUSE_MPI"
fi

if test $USE_FFTW3 = "yes"; then
AC_CHECK_LIB(fftw3, fftw_execute, [], [
        echo "Couldn't find fftw3 library."
        exit -1
        ])
AC_CHECK_LIB(fftw3f, fftwf_execute, [], [
        echo "Couldn't find fftw3 library."
        exit -1
        ])
FFTW_CXXFLAGS=
FFTW_LDADD=" -lfftw3 -lfftw3f"
fi
SFXC_CXXFLAGS="$SFXC_CXXFLAGS $FFTW_CXXFLAGS"
SFXC_LDADD="$SFXC_LDADD $FFTW_LDADD"

dnl ---------------------------------------------------------------------------
dnl setting shipped libraries
dnl ---------------------------------------------------------------------------
dnl setting Damien's libraries
DAMIEN_CXXFLAGS='-I${top_srcdir}/lib/common/src -I${top_srcdir}/lib/containers/src -I${top_srcdir}/lib/netlib/src -I${top_srcdir}/lib/testunit/src '
DAMIEN_LDADD='-L${top_srcdir}/lib/testunit -ltestunit -L${top_srcdir}/lib/netlib -lnetlib -L${top_srcdir}/lib/containers -lcontainers -L${top_srcdir}/lib/common -lcommon -ltestunit'

SFXC_CXXFLAGS="$SFXC_CXXFLAGS $DAMIEN_CXXFLAGS"
SFXC_LDADD="$SFXC_LDADD $DAMIEN_LDADD"

dnl setting json-cpp
JSONCPP_CXXFLAGS=' -I${top_srcdir}/lib/jsoncpp/include '
JSONCPP_LDADD=' -L${top_srcdir}/lib/jsoncpp -ljsoncpp '

SFXC_CXXFLAGS="$SFXC_CXXFLAGS $JSONCPP_CXXFLAGS"
SFXC_LDADD="$SFXC_LDADD $JSONCPP_LDADD"

dnl if test $USE_MPI = "yes"; then
dnl   AC_CHECK_LIB(mpi, MPI_Init, [], [
dnl                echo "Couldn't find MPI library. "
dnl                exit -1
dnl               ])
dnl fi



dnl setting gsl
dnl first check gslcblas
if test $USE_GSL = "yes"; then
  AC_CHECK_LIB([gslcblas],[cblas_dgemm])
  AC_CHECK_LIB([gsl],[gsl_blas_dgemm],
  dnl found gsl, use the global version
  GSL_CXXFLAGS=''
  GSL_LDADD='-lgsl -lgslcblas'
  HAS_GSL='yes'
  ,
  dnl gsl not found, install a local copy
  GSL_CXXFLAGS='-I${top_srcdir}/lib/gsl/install/include '
  GSL_LDADD='-L${top_srcdir}/lib/gsl/install/lib -lgsl -lgslcblas'
  HAS_GSL='no'
  )
fi

WITH_SFXC="no"
WITH_SFXC_UTILS="no"
if test $USE_GSL = "yes"; then
  if test $USE_FFTW3 = "yes"; then
      WITH_SFXC_UTILS="yes"
      if test $USE_MPI = "yes"; then
        WITH_SFXC="yes"
      fi
  fi
fi

if test $USE_FFTW3 = "no"; then
      WITH_GENDELAY="no"
fi
if test $USE_GSL = "no"; then
      WITH_GENDELAY="no"
fi


SFXC_CXXFLAGS="$SFXC_CXXFLAGS $GSL_CXXFLAGS"
SFXC_LDADD="$SFXC_LDADD $GSL_LDADD"

dnl setting vex_parser
VEX_PARSER_CXXFLAGS='-I${top_srcdir}/lib/vex_parser/install/include '
VEX_PARSER_LDADD='-L${top_srcdir}/lib/vex_parser/install/lib -lvex_parser '
AC_SUBST(VEX_PARSER_CXXFLAGS)
AC_SUBST(VEX_PARSER_LDADD)

SFXC_CXXFLAGS="$SFXC_CXXFLAGS $VEX_PARSER_CXXFLAGS"
SFXC_LDADD="$SFXC_LDADD $VEX_PARSER_LDADD"

BASE_CXXFLAGS='-I${top_srcdir}/include '
BASE_LDADD=' '

UTILS_CXXFLAGS="$BASE_CXXFLAGS $VEX_PARSER_CXXFLAGS $JSONCPP_CXXFLAGS $DAMIEN_CXXFLAGS $FFTW_CXXFLAGS $GSL_CXXFLAGS"
UTILS_LDADD="$BASE_LDADD $VEX_PARSER_LDADD $JSONCPP_LDADD $DAMIEN_LDADD $FFTW_LDADD $GSL_LDADD"

dnl resetting generic flags
CXXFLAGS=$CXXFLAGS_IN
CFLAGS=$CFLAGS_IN
LDFLAGS=$LDFLAGS_IN
LIBS=$LIBS_IN

dnl export these variable (so Makefile substitutions
dnl can be made.
AC_SUBST(FFTW_CXXFLAGS)
AC_SUBST(FFTW_LDADD)
AC_SUBST(DAMIEN_CXXFLAGS)
AC_SUBST(DAMIEN_LDADD)
AC_SUBST(JSONCPP_CXXFLAGS)
AC_SUBST(JSONCPP_LDADD)

AC_SUBST(UTILS_CXXFLAGS)
AC_SUBST(UTILS_LDADD)
AC_SUBST(BASE_CXXFLAGS)
AC_SUBST(BASE_LDADD)
AC_SUBST(GSL_CXXFLAGS)
AC_SUBST(GSL_LDADD)
AC_SUBST(HAS_GSL)

AC_SUBST(CFLAGS)
AC_SUBST(CXXFLAGS)
AC_SUBST(LDFLAGS)
AC_SUBST(LDADD)

AC_SUBST(SFXC_CFLAGS)
AC_SUBST(SFXC_CXXFLAGS)
AC_SUBST(SFXC_LDFLAGS)
AC_SUBST(SFXC_LDADD)

AC_SUBST(WITH_CALC)
AC_SUBST(WITH_GENDELAY)
AC_SUBST(WITH_SFXC)
AC_SUBST(WITH_SFXC_UTILS)

dnl echo "SFXC_CFLAGS: $SFXC_CFLAGS"
dnl echo "SFXC_CXXFLAGS: $SFXC_CXXFLAGS"
dnl echo "SFXC_LDFLAGS: $SFXC_LDFLAGS"
dnl echo "SFXC_LDADD: $SFXC_LDADD"


AM_CONDITIONAL(GENDELAY, [test "$WITH_GENDELAY" = "yes"])
AM_CONDITIONAL(CALCTEN, [test "$WITH_CALC" = "yes"])
AM_CONDITIONAL(SFXC_UTILS, [test "$WITH_SFXC_UTILS" = "yes"])
AM_CONDITIONAL(SFXC, [test "$WITH_SFXC" = "yes"])

AC_OUTPUT(Makefile
          lib/Makefile
          lib/calc10/Makefile
          lib/calc10/include/Makefile
          lib/calc10/lib/Makefile
          lib/calc10/src/Makefile
          lib/common/Makefile
          lib/common/test/Makefile
          lib/containers/Makefile
          lib/containers/test/Makefile
          lib/netlib/Makefile
          lib/testunit/Makefile
          lib/jsoncpp/Makefile
          lib/gsl/Makefile
          lib/vex_parser/Makefile
          src/Makefile
          include/Makefile
          utils/Makefile
          utils/delay/Makefile
          doc/Makefile
          doc/html/Makefile
         )

echo "=================== compilation summary =================="
echo "Use mpi: $USE_MPI"
echo "Use fftw3: $USE_FFTW3"
echo "Use gsl: $USE_GSL"
echo "Build sfxc: $WITH_SFXC"
echo "Build utils/*: $WITH_SFXC_UTILS"
echo "Build generate_delay_model: $WITH_GENDELAY"
echo "Build calc10: $WITH_CALC"
echo "Build dnfp_fileclient/server: yes"
echo "=========================================================="

